--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 })
 var c = document.getElementsByTagName('canvas')[0],
   x = c.getContext('2d'),
-  pr = 1,
+  pr = 1, // window.devicePixelRatio || 
   w = window.innerWidth,
   h = window.innerHeight,
   f = 90,
